apps/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-dashboard
  labels:
    app.kubernetes.io/managed-by: argocd
